--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/nine-five/draft",
   "license": "MIT",
   "devDependencies": {
-    "http-server": "^0.6.1"
+    "http-server": "0.6.1"
   },
   "scripts": {
     "start": "http-server -p 8000"
