--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "description": "Simple and better",
   "repository": "https://github.com/nine-five/draft",
   "license": "MIT",
+  "dependencies": {
+    "node-http-server": "1.6.2"
+  },
   "devDependencies": {
-    "http-server": "0.6.1"
+    "node-http-server": "1.6.2"
   },
   "scripts": {
-    "start": "http-server -p 8000"
-  }
+    "start": "node server.js"
+  },
+  "main": "server.js"
 }
