--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "description": "Simple and better",
   "repository": "https://github.com/nine-five/draft",
   "license": "MIT",
-  "devDependencies": {
-    "http-server": "^0.6.1"
+  "dependencies": {
+    "connect": "~2.16",
+    "express": "~4.2"
   },
   "scripts": {
-    "start": "http-server -p 8000"
+    "start": "node server.js"
   }
 }
