--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "dependencies": {
     "connect": "~2.16",
-    "express": "~4.2"
+    "express": "~4.2",
+    "koa": "~0.6",
+    "koa-static": "~1.4"
   },
   "scripts": {
     "start": "node server.js"
